--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -29,7 +29,7 @@
     {% set current_path = current_path | default(value="/") %}
     {% if current_path == "/" %}
     <title>
-        {{ config.title | default(value="Home") }}
+        {{ config.title }}
     </title>
     {% if not page_has_og_title %}
         <meta property="og:title" content="{{ config.title | default(value="Home") }}" />
