feat: 更新博客配置和内容，添加友情链接页面

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -37,10 +37,7 @@
 
     {% else %}
     <title>
-        {% if page.title %} {{ page.title }}
-        {% elif section.title %} {{ section.title }}
-        {% elif config.title %} {{ config.title }}
-        {% else %} Post {% endif %}
+        {{ config.title }}
     </title>
 
         {% if not page_has_og_title %}
