feat: Chinese typesetting

--- a/templates/macros/typst.html
+++ b/templates/macros/typst.html
@@ -21,7 +21,8 @@
 
                         {# Inline display of tags directly after the date #}
                         {% if page.taxonomies and page.taxonomies.tags %}
-                                <span class="tags-label"> :: Tags:</span>
+                                <br />
+                                <span class="tags-label">Tags:</span>
                                 <span class="tags">
                                     {%- for tag in page.taxonomies.tags %}
                                         <a href="{{ get_taxonomy_url(kind='tags', name=tag) }}" class="post-tag">{{ tag }}</a>{% if not loop.last %}, {% endif %}
