--- a/themes/apollo/sass/parts/_header.scss
+++ b/themes/apollo/sass/parts/_header.scss
@@ -3,6 +3,7 @@
     line-height: 100%;
     font-family: var(--header-font);
     margin: 4rem 0px 1rem 0px;
+    text-align: center;
 }
 
 .centered-header {
