fix: typo in sass variable name
Signed-off-by: purofle <purofle@gmail.com>

--- a/themes/apollo/sass/parts/_tags.scss
+++ b/themes/apollo/sass/parts/_tags.scss
@@ -14,7 +14,7 @@
   }
 
   a:hover {
-    color: var(--hover_color);
+    color: var(--hover-color);
     background-color: var(--primary-color);
   }
 
