feat: add language toggle link and style adjustments
Signed-off-by: purofle <purofle@gmail.com>

--- a/themes/apollo/sass/parts/_header.scss
+++ b/themes/apollo/sass/parts/_header.scss
@@ -52,6 +52,14 @@ header .socials {
     justify-content: center;
 }
 
+#language-toggle {
+  border-bottom: none;
+
+  .hover {
+    border-bottom: none;
+  }
+}
+
 .socials {
     /* flex-child */
     flex-grow: 0;
